@@ -1,3 +1,6 @@
+2012-05-03
+* rework bruteforce.py so it is easier to make different frontends
+
 2012-05-02
 * add very simplistic verifier for MP4 files to reduce false positives
 further. Only works on a subset of files for now
